# OrderMatchingEngine

./: .gitignore  CMakeLists.txt  README.md
include/: MatchingEngine.h  Order.h  OrderBook.h  Orders.h  Ticks.h  Trade.h  Types.h
src/: MatchingEngine.cpp  OrderBook.cpp  Ticks.cpp  main.cpp
